--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^7.0.4",
+    "axios": "^1.7.7",
     "expo": "^52.0.7",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
