--- a/app.json
+++ b/app.json
@@ -4,13 +4,10 @@
     "slug": "projeto-ecom",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/transparente.png",
+  
     "userInterfaceStyle": "light",
-    "newArchEnabled": true,
-    "splash": {
-      "image": "./assets/transparente.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+    "newArchEnabled": true
+   
     },
     "ios": {
       "supportsTablet": true
@@ -25,4 +22,4 @@
       "favicon": "./assets/favicon.png"
     }
   }
-}
+
