--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native": "0.76.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "expo-splash-screen": "~0.29.13"
+    "expo-splash-screen": "~0.29.13",
+    "expo-image-picker": "~16.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
