--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/bottom-tabs": "^7.0.7",
+    "@react-navigation/drawer": "^7.0.7",
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^7.0.4",
     "axios": "^1.7.7",
